--- a/index.html
+++ b/index.html
@@ -19,70 +19,74 @@
 <body>
     <footer>
         <div class="container footer-content">
-            <a href="/index.html" class="footer-logo">watchcharm</a>
-
-            <p class="footer-center-text">Have the time of your life with our watches: where high-class craftsmanship meets impeccable design</p>
-
-            <address class="footer-phone">
-                <a class="footer-phone-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
-            </address>
-
-            <ul class="footer-icons-ul">
-                <li class="footer-icons-li">
-                    <a href="#" class="footer-icons-link">
-                        <svg class="footer-icons" width="20" height="20">
-                            <use href="./icons/images.svg#icon-facebook"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-icons-li">
-                    <a href="#" class="footer-icons-link">
-                        <svg class="footer-icons" width="20" height="20">
-                            <use href="./icons/images.svg#icon-instagram"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="footer-icons-li">
-                    <a href="#" class="footer-icons-link">
-                        <svg class="footer-icons" width="20" height="20">
-                            <use href="./icons/images.svg#icon-youtube"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-
-            <nav class="footer-nav">
-                <ul class="footer-nav-ul">
-                    <li class="footer-nav-li">
-                        <a href="/index.html" class="footer-nav-link">Home</a>
-                    </li>
-                    <li class="footer-nav-li">
-                        <a href="#" class="footer-nav-link">About Us</a>
-                    </li>
-                    <li class="footer-nav-li">
-                        <a href="#" class="footer-nav-link">Catalog</a>
-                    </li>
-                    <li class="footer-nav-li">
-                        <a href="#" class="footer-nav-link">Sale</a>
-                    </li>
-                    <li class="footer-nav-li">
-                        <a href="#" class="footer-nav-link">Reviews</a>
-                    </li>
-                    <li class="footer-nav-li">
-                        <a href="#" class="footer-nav-link">Contact Us</a>
-                    </li>
-                </ul>
-
-                <p class="footer-place-text">1678 S. Pioneer Road Salt Lake City UT 84104</p>
-
-                <p class="footer-copyright">&copy;2023 The Watch Spot. All rights reserved.</p>
-
-                <div class="footer-legal-links">
-                    <a href="#">Terms of Service</a>
-                    <a href="#">Privacy Policy</a>
+            <div class="cont-logo-icons-number">
+                <div class="cont-logo-icons">
+                    <a href="/index.html" class="footer-logo">watchcharm</a>
+                    <ul class="footer-icons-ul">
+                        <li class="footer-icons-li">
+                            <a href="https://www.facebook.com/goITclub/" class="footer-icons-link">
+                                <svg class="footer-icons" width="20" height="20">
+                                    <use href="./icons/images.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icons-li">
+                            <a href="https://www.instagram.com/goitclub/" class="footer-icons-link">
+                                <svg class="footer-icons" width="20" height="20">
+                                    <use href="./icons/images.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-icons-li">
+                            <a href="https://www.youtube.com/c/GoIT" class="footer-icons-link">
+                                <svg class="footer-icons" width="20" height="20">
+                                    <use href="./icons/images.svg#icon-youtube"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
+                <address class="footer-phone">
+                    <a class="footer-phone-link" href="tel:+380684439426">+380 (68) 443-94-26</a>
+                </address>
+            </div>
 
-            </nav>
+            <p class="footer-center-text">Have the time of your life with our watches: where high-class craftsmanship meets
+                impeccable design</p>
+            
+            <div class="navigation-and-place-text-block">
+                <nav class="footer-nav">
+                    <ul class="footer-nav-ul">
+                        <li class="footer-nav-li">
+                            <a href="/index.html" class="footer-nav-link">Home</a>
+                        </li>
+                        <li class="footer-nav-li">
+                            <a href="#" class="footer-nav-link">About Us</a>
+                        </li>
+                        <li class="footer-nav-li">
+                            <a href="#" class="footer-nav-link">Catalog</a>
+                        </li>
+                        <li class="footer-nav-li">
+                            <a href="#" class="footer-nav-link">Sale</a>
+                        </li>
+                        <li class="footer-nav-li">
+                            <a href="#" class="footer-nav-link">Reviews</a>
+                        </li>
+                        <li class="footer-nav-li">
+                            <a href="#" class="footer-nav-link">Contact Us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <p class="footer-place-text">1678 S. Pioneer Road Salt Lake City UT 84104</p>
+            </div>
+
+            <div class="cont-copyright-legal-links">
+                <p class="footer-copyright">&copy;2023 The Watch Spot. All rights reserved.</p>
+                <div class="footer-legal-links">
+                    <a class="footer-legal-link" href="#">Terms of Service</a>
+                    <a class="footer-legal-link" href="#">Privacy Policy</a>
+            </div>
+            </div>
         </div>
     </footer>
 </body>
